Closed Bug 1867290 Opened 2 years ago Closed 2 years ago

Missing newlines in errors breaks glxtest

Categories

(Core :: Widget: Gtk, defect)

Firefox 120
defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- wontfix
firefox121 --- fixed
firefox122 --- fixed

People

(Reporter: david.turner, Assigned: david.turner)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

Attached file support_bad

Steps to reproduce:

  • Running on Raspberry Pi OS Bookworm, based on Debian Bookworm, using the Wayfire wayland compositor.
  • Upgraded from Firefox 119 to 120

Actual results:

Upgrading from Firefox 119 to 120 breaks DMAbufs, which drastically reduces performance on WebGL. I did a git bisect and the problem is a regression in from https://phabricator.services.mozilla.com/D189920 from Bug 1856582.

Digging into it, the problem is because that commit changes record_warning and record_error and removes the newline after the content of the warning/error. Since the warning/error messages themselves don't contain newlines, this means that the next line in glxtest output gets appended on the same line as the warning/error. In my case this means the DRM_RENDERDEVICE line gets glued onto the preceding warning and so the parser doesn't see it and disables DMAbufs.

I've attached my about:support from the commit before and after the breakage, the problem can be seen in the gfx failure log.

Attached file support_good

@stransky If you agree with my assessment I can get a diff up for this. The fix might be worth uplifting if it's going to break random gfx features any time there is a warning from glxtest

Flags: needinfo?(stransky)

The Bugbug bot thinks this bug should belong to the 'Core::Graphics' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Graphics
Product: Firefox → Core

As part of other changes, bug 1856582 removed newlines at the end of
record_warning() and record_error() messages. But most uses of these
macros don't put newlines in themselves. This meant that warnings and
errors in glxtest output were missing newlines and so the following line
would get appended to the error/warning message. This could break
various things depending what the next line after the error/warning was
meant to be.

Assignee: nobody → david.turner
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/92ebd26049f6 Add back newline in record_warning and record_error r=stransky
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Component: Graphics → Widget: Gtk
Keywords: regression
Regressed by: 1856582

Set release status flags based on info from the regressing bug 1856582

The patch landed in nightly and beta is affected.
:david.turner, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox121 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(david.turner)

As part of other changes, bug 1856582 removed newlines at the end of
record_warning() and record_error() messages. But most uses of these
macros don't put newlines in themselves. This meant that warnings and
errors in glxtest output were missing newlines and so the following line
would get appended to the error/warning message. This could break
various things depending what the next line after the error/warning was
meant to be.

Original Revision: https://phabricator.services.mozilla.com/D194997

Attachment #9367241 - Flags: approval-mozilla-beta?

Uplift Approval Request

  • Fix verified in Nightly: yes
  • Steps to reproduce for manual QE testing: Check that gfx acceleration features in about:support are correct for the platform
  • Is Android affected?: no
  • String changes made/needed: I don't think these strings are user facing / localised
  • Explanation of risk level: Small change to a particular area which just restores previous behaviour
  • Code covered by automated testing: no
  • Risk associated with taking this patch: Low
  • User impact if declined: gfx hardware acceleration features may not work at random
  • Needs manual QE test: no
Flags: needinfo?(david.turner)

Comment on attachment 9367241 [details]
Bug 1867290 - Add back newline in record_warning and record_error

Approved for 121.0b9.

Attachment #9367241 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: