Bug 1867290 - Add back newline in record_warning and record_error r=stransky

As part of other changes, bug 1856582 removed newlines at the end of
record_warning() and record_error() messages.  But most uses of these
macros don't put newlines in themselves.  This meant that warnings and
errors in glxtest output were missing newlines and so the following line
would get appended to the error/warning message.  This could break
various things depending what the next line after the error/warning was
meant to be.

Differential Revision: https://phabricator.services.mozilla.com/D194997