widget/gtk/GfxInfoUtils.h
@@ -79,8 +79,9 @@ static void record_value(const char* format, ...) {
   }
 }
 
-#define record_error(str_, ...) record_value("ERROR\n" str_, ##__VA_ARGS__)
-#define record_warning(str_, ...) record_value("WARNING\n" str_, ##__VA_ARGS__)
+#define record_error(str_, ...) record_value("ERROR\n" str_ "\n", ##__VA_ARGS__)
+#define record_warning(str_, ...) \
+  record_value("WARNING\n" str_ "\n", ##__VA_ARGS__)
 
 static void record_flush() {
   if (!test_buf) {
